Added lock image to blue button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
 
         <button class="navBarbutton">
+          <img src="./image/whitelock.png" class="navBarbutton__lock" >
           Sign In
         </button>
       </div>
