Added some basic styling to texts and small fixes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="navbarContainer">
       <div class="navbarContainer__message">
         Already have an Intuit account? <br />
-        <a class="navbarContainer__link">I forgot my User ID or Password</a>
+        <a href="#" class="navbarContainer__link">I forgot my User ID or Password</a>
       </div>
 
       <button class="navBarbutton">
@@ -48,7 +48,7 @@
         </div>
         <div class="formBody__description">
             One account for everything Intuit, including Mint. <br> 
-            <a href="#" target="_blank" rel="noopener noreferrer">
+            <a href="#" target="_blank" rel="noopener noreferrer" class="--link">
               Learn more
             </a>
         </div>
