Added Footer and Styles

--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footerLinks">
+        <a href="#" class="footerLinks__grey">Legal</a>
+        <a href="#" class="footerLinks__grey">Privacy</a>
+        <a href="#" class="footerLinks__grey">Security</a>
+      </div>
+      <div class="footerNotice">
+        © 2019 Intuit, Inc. All rights reserved. Intuit, QuickBooks, QB, TurboTax, ProConnect and Mint are registered trademarks of Intuit Inc. <br>
+Terms and conditions, features, support, pricing, and service options subject to change without notice.
+      </div>
+    </footer>
   </body>
 </html>
