--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Document</title>
+    <title>Intuit Accounts - Sign Up</title>
   </head>
 
   <body>
@@ -14,12 +14,11 @@
         <div class="navbarContainer__message">
           Already have an Intuit account? <br />
           <a href="#" class="navbarContainer__link"
-            >I forgot my User ID or Password</a
-          >
+            >I forgot my User ID or Password</a>
         </div>
 
         <button class="navBarbutton">
-          <img src="./image/whitelock.png" class="navBarbutton__lock" />
+          <img src="./image/whitelock.png" class="navBarbutton__lock" alt="lock" />
           Sign In
         </button>
       </div>
@@ -27,11 +26,13 @@
     <main>
       <div class="mainContainer">
         <div class="formHeader">
-          <img
-            src="./image/intuit.PNG"
-            alt="Main Logo"
-            class="formHeader__logo"
-          />
+          <a href="#">
+            <img
+              src="./image/intuit.PNG"
+              alt="Main Logo"
+              class="formHeader__logo"
+            />
+          </a>
           <div class="formHeader__links">
             <a href="#" class="formLink">
               <img src="./image/mint.svg" alt="" class="formLink__icons" />
@@ -85,8 +86,8 @@
                 Phone (Recommended)
               </label>
               <div class="input">
-                <input class="input__inputBar" type="text" />
-                <img src="" alt="" srcset="" />
+                <input class="input__inputBar" type="text" id="phone" />
+                <!-- <img src="" alt="" srcset="" /> -->
                 <p class="formMiniMessage">
                   Standard call, messaging or data rates may apply.
                 </p>
@@ -103,22 +104,21 @@
                   id="password"
                   class="input__inputBar"
                 />
-                <img src="" alt="" srcset="" />
+                <!-- <img src="" alt="" srcset="" /> -->
               </div>
             </div>
             <button class="navBarbutton --formButtom" type="submit">
               <img
                 src="./image/whitelock.png"
-                alt=""
-                srcset=""
+                alt="lock"
                 class="navBarbutton__lock --formImg"
               />
               Create Account
             </button>
           </form>
           <p class="formInfo">
-            By clicking Create account, you agree to our
-            <a href="" class="--link">Terms</a>and have read and acknowledge our
+            By clicking Create account, you agree to our <br>
+            <a href="" class="--link">Terms</a> and have read and acknowledge our
             <a href="" class="--link">Privacy Statement.</a>
           </p>
           <div class="formBody__footer">
