--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
         <div class="navbarContainer__message">
           Already have an Intuit account? <br />
           <a href="#" class="navbarContainer__link"
-            >I forgot my User ID or Password</a>
+            >I forgot my User ID or Password</a
+          >
         </div>
 
         <button class="navBarbutton">
-          <img src="./image/whitelock.png" class="navBarbutton__lock" alt="lock" />
+          <img
+            src="./image/whitelock.png"
+            class="navBarbutton__lock"
+            alt="lock"
+          />
           Sign In
         </button>
       </div>
@@ -117,8 +122,9 @@
             </button>
           </form>
           <p class="formInfo">
-            By clicking Create account, you agree to our <br>
-            <a href="" class="--link">Terms</a> and have read and acknowledge our
+            By clicking Create account, you agree to our <br />
+            <a href="" class="--link">Terms</a> and have read and acknowledge
+            our
             <a href="" class="--link">Privacy Statement.</a>
           </p>
           <div class="formBody__footer">
@@ -138,8 +144,11 @@
         <a href="#" class="footerLinks__grey">Security</a>
       </div>
       <div class="footerNotice">
-        © 2019 Intuit, Inc. All rights reserved. Intuit, QuickBooks, QB, TurboTax, ProConnect and Mint are registered trademarks of Intuit Inc. <br>
-Terms and conditions, features, support, pricing, and service options subject to change without notice.
+        © 2019 Intuit, Inc. All rights reserved. Intuit, QuickBooks, QB,
+        TurboTax, ProConnect and Mint are registered trademarks of Intuit Inc.
+        <br />
+        Terms and conditions, features, support, pricing, and service options
+        subject to change without notice.
       </div>
     </footer>
   </body>
