fixed inputs types

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 Phone (Recommended)
               </label>
               <div class="input">
-                <input class="input__inputBar" type="text" id="phone" />
+                <input class="input__inputBar" type="tel" id="phone" />
                 <!-- <img src="" alt="" srcset="" /> -->
                 <p class="formMiniMessage">
                   Standard call, messaging or data rates may apply.
